# edgeai4health-talentai

./: pyproject.toml
