[project]
name = "edgeai4health-talentai"
version = "0.1.0"
description = ""
authors = [
    {name = "TheMetaSetter",email = "134222962+TheMetaSetter@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "streamlit (>=1.48.0,<2.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"

